Bug 502123 - Switching focus out of a windowed plugin raises the toplevel window. r=mozbugs.